--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,36 @@ body {
     background-color: black;
     color: #D3D3D3;
 }
+#section5{
+    height: 100%;
+}
+#section6{
+    height: 100%;
+    padding: 200px;
+    background-image: url("https://64.media.tumblr.com/975789dd7f69009642523ef80bc340b3/tumblr_pijex9cd631uzwgsuo1_400.gifv");
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover;
+    color: #D3D3D3;
+}
+
+#section7{
+    height: 100%;
+    padding: 200px;
+    background-color: black;
+    color: #D3D3D3;
+}
+
+#section9{
+    height: 100%;
+    padding: 200px;
+    background-color: black;
+    color: #D3D3D3;
+}
+
+#section8{
+    height: 100%;
+}
 
 #barvis{
     height:500px;
