resolved css errors

--- a/css/styles.css
+++ b/css/styles.css
@@ -380,6 +380,5 @@ ul {
     bottom: 20px;
     width: 38px;
     height: 44px;
-    background: url("../img/cd-arrow-bottom.svg") no-repeat center center;
+    /*background: url("../img/cd-arrow-bottom.svg") no-repeat center center;*/
 }
->>>>>>> 4b50474909a2361a06422c7ba956ed6ee999284c
