--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,23 @@ body {
     height: 100%;
     background-image: url("https://64.media.tumblr.com/36d8d3e575d8b4f23549d1a4c7383278/73e1f7484c97dd06-cf/s400x600/3dc68c7134d23c9361842f43bb8c8277e2e63b9b.gifv");
     font-size: 40px;
-    padding: 200px;
+    padding-top: 30vh;
+    padding-right: 20vh;
+    padding-left: 20vh;
+    text-align: center;
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover;
+    color: black;
+}
+
+#header2{
+    height: 100%;
+    background-image: url("https://64.media.tumblr.com/36d8d3e575d8b4f23549d1a4c7383278/73e1f7484c97dd06-cf/s400x600/3dc68c7134d23c9361842f43bb8c8277e2e63b9b.gifv");
+    font-size: 40px;
+    padding-top: 30vh;
+    padding-right: 20vh;
+    padding-left: 20vh;
     text-align: center;
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Do not repeat the image */
@@ -72,12 +88,10 @@ body {
 }
 #section0{
     height: 100%;
-    padding: 200px;
+    padding-top: 30vh;
+    padding-right: 20vh;
+    padding-left: 20vh;
     background-color: black;
-    /*background-image: url("https://c.tenor.com/ZwPZlw0itmMAAAAC/waves-black.gif");*/
-    /*background-position: center; !* Center the image *!*/
-    /*background-repeat: no-repeat; !* Do not repeat the image *!*/
-    /*background-size: cover;*/
     color: #D3D3D3;
 }
 #section1{
@@ -87,13 +101,15 @@ body {
 
 #section2{
     height: 100%;
-    padding: 200px;
+    padding-top: 30vh;
     background-color: black;
     background-image: url("https://i.pinimg.com/originals/62/05/f5/6205f5b7e065b35b921b9a58561107b6.gif");
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover;
     color: #D3D3D3;
+    padding-right: 20vh;
+    padding-left: 20vh;
 }
 #section3{
     height:120%;
@@ -101,7 +117,9 @@ body {
 }
 #section4{
     height: 100%;
-    padding: 200px;
+    padding-top: 30vh;
+    padding-right: 20vh;
+    padding-left: 20vh;
     background-color: black;
     color: #D3D3D3;
 }
@@ -110,7 +128,9 @@ body {
 }
 #section6{
     height: 100%;
-    padding: 200px;
+    padding-top: 30vh;
+    padding-right: 20vh;
+    padding-left: 20vh;
     background-image: url("https://64.media.tumblr.com/975789dd7f69009642523ef80bc340b3/tumblr_pijex9cd631uzwgsuo1_400.gifv");
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Do not repeat the image */
@@ -120,14 +140,18 @@ body {
 
 #section7{
     height: 100%;
-    padding: 200px;
+    padding-top: 30vh;
+    padding-right: 20vh;
+    padding-left: 20vh;
     background-color: black;
     color: #D3D3D3;
 }
 
 #section9{
     height: 100%;
-    padding: 200px;
+    padding-top: 30vh;
+    padding-right: 20vh;
+    padding-left: 20vh;
     background-color: black;
     color: #D3D3D3;
 }
