--- a/css/styles.css
+++ b/css/styles.css
@@ -287,7 +287,7 @@ ul {
 
 #cd-vertical-nav {
     position: fixed;
-    left:40px;
+    right:40px;
     top: 50%;
     bottom: auto;
     -webkit-transform: translateY(-50%);
@@ -298,7 +298,7 @@ ul {
     z-index: 1;
 }
 #cd-vertical-nav li {
-    text-align: left;
+    text-align: right;
 
 }
 #cd-vertical-nav a {
@@ -321,7 +321,7 @@ ul {
     clear: both;
 }
 #cd-vertical-nav a span {
-    float: left;
+    float: right;
     display: inline-block;
     -webkit-transform: scale(0.6);
     -moz-transform: scale(0.6);
@@ -369,7 +369,7 @@ ul {
     color: #51CAEA;
     font-size: 21px;
     padding-top: 10px;
-    padding-left: 12px;
+    padding-right: 12px;
     line-height: 6px ;
     font-size: 0.875rem;
     -webkit-transition: -webkit-transform 0.2s, opacity 0.2s;
